--- a/Local Tier List/Properties/launchSettings.json
+++ b/Local Tier List/Properties/launchSettings.json
@@ -1,6 +1,10 @@
 {
   "profiles": {
     "Windows Machine": {
+        "commandName": "Project",
+        "nativeDebugging": false
+    },
+    "Android": {
       "commandName": "Project",
       "nativeDebugging": false
     }
