--- a/Local Tier List/Local Tier List.csproj
+++ b/Local Tier List/Local Tier List.csproj
@@ -45,13 +45,6 @@
         <!-- App Icon -->
         <MauiIcon Include="Resources\AppIcon\ender.png" ForegroundFile="Resources\AppIcon\ender.png" Color="#512BD4" />
 
-        <!-- Splash Screen -->
-        <MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#512BD4" BaseSize="128,128" />
-
-        <!-- Images -->
-        <MauiImage Include="Resources\Images\*" />
-        <MauiImage Update="Resources\Images\dotnet_bot.svg" BaseSize="168,208" />
-
         <!-- Custom Fonts -->
         <MauiFont Include="Resources\Fonts\*" />
 
@@ -68,7 +61,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\LocalTierListLib\LocalTierListLib.csproj" />
+      <ProjectReference Include="..\..\MaieBlazorLib\MaieBlazorLib\MaieBlazorLib.csproj" />
     </ItemGroup>
 
 </Project>
